[package]
name = "classicube-helpers"
version = "2.0.0+classicube.1.3.6"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git" }
classicube-sys = "4"
futures = "0.3"
futures-timer = "3"
lazy_static = "1"
paste = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
ci = []
