[package]
name = "classicube-helpers"
version = "3.0.0+classicube.1.3.7"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git" }
classicube-sys = "4"
futures = "0.3"
futures-timer = "3"
lazy_static = "1"
paste = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
ci = []


[package.metadata.release]
pre-release-commit-message = "Release {{version}}"
tag-message = "Release version {{version}}"
metadata = "required"
