[package]
name = "classicube-helpers"
version = "3.1.0+ClassiCube.1.3.7"
authors = ["SpiralP <spiral.palmer@gmail.com>"]
edition = "2024"
publish = false

[dependencies]
async-dispatcher = { git = "https://github.com/SpiralP/rust-async-dispatcher.git", branch = "main" }
classicube-sys = "5"
futures = "0.3"
futures-timer = "3"
paste = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "=0.3.23", features = ["env-filter"] }

[features]
ci = []
